<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

    <Button
            android:id="@+id/btnIdleActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/go_to_idle_activity"
            android:onClick="goToIdleActivity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName"/>

    <TextView
            android:id="@+id/tvGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="28sp"
            tools:text="Greeting"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnIdleActivity"/>

    <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/name_hint"
            android:inputType="textPersonName|textCapWords"
            app:layout_constraintTop_toBottomOf="@id/tvGreeting"/>

    <Button
            android:id="@+id/button_popular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/theme_popular"
            android:onClick="goToIdeaActivity"
            app:layout_constraintEnd_toStartOf="@+id/button_famous"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName"/>

    <Button
            android:id="@+id/button_famous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/theme_famous"
            android:onClick="goToIdeaActivity"
            app:layout_constraintEnd_toStartOf="@+id/button_punny"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_popular"
            app:layout_constraintTop_toBottomOf="@id/etName"/>

    <Button
            android:id="@+id/button_punny"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/theme_punny"
            android:onClick="goToIdeaActivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_famous"
            app:layout_constraintTop_toBottomOf="@id/etName"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipes"
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@id/button_famous"/>

</androidx.constraintlayout.widget.ConstraintLayout>